# gps-study

./: .gitignore  Cargo.toml  README.md  config.toml
api/: Cargo.toml
client/: Cargo.toml  README.md
client/src/: lib.rs  main.rs  udp_client.rs
src/: config.rs  db.rs  lib.rs  main.rs  payload.rs  request.rs  response.rs  udp_server.rs  user.rs  validation.rs
src/actions/: coordinates.rs  heartbeat.rs  login.rs  logout.rs  mod.rs
storage/: sample_data_1.json  sample_data_2.json  sample_data_3.json  sample_data_4.json  sample_data_5.json
ui/: index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
ui/public/data/: andressbonifacio.js  joserizal.js  mycoordinates.js  test.json
ui/src/: App.vue  main.js  style.css
ui/src/components/: GPSData.vue  Map.vue
ui/src/interfaces/: GPSDataInterface.ts  index.ts
web/: Cargo.toml  README.md
web/src/: main.rs
