[workspace]
members = ["client"]
resolver = "2"

[package]
name = "gps-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
hex = "0.4.3"
ieee-754 = "0.1.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
surrealdb = "2.1.4"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
toml = "0.8.20"
