[package]
name = "gps-tracker-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
actix-ws = "0.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
surrealdb = "2.2.1"
tokio = "1.44.1"

gps-tracker = { path = "../" }
futures = "0.3.31"
futures-util = "0.3.31"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
